--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,4 +18,6 @@ dependencies {
   implementation 'org.osmdroid:osmdroid-android:6.1.18'
   implementation 'com.google.android.gms:play-services-location:21.3.0'
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1'
+  implementation 'com.google.android.material:material:1.12.0'
+
 }
